[metadata]
name = aoc-21-j4p3
version = 0.0.1
author = JP
description = Advent of Code 2021 Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/j4p3/aoc_21_py
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src